--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,3 +1,8 @@
 mcp==1.8.0
 uvicorn==0.34.2
 pillow==11.1.0
+chess==1.11.2
+openapi-pydantic==0.5.1
+pydantic==2.11.5
+pydantic-settings==2.9.1
+pydantic_core==2.33.2
