--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,4 +1,5 @@
-mcp==1.8.0
+mcp==1.9.1
+mcp-use==1.2.13
 uvicorn==0.34.2
 pillow==11.1.0
 chess==1.11.2
@@ -9,3 +10,15 @@ pydantic_core==2.33.2
 requests==2.32.3
 urllib3==2.3.0
 open-meteo==0.3.2
+langchain==0.3.25
+langchain-core==0.3.61
+langchain-community==0.3.24
+langchain-anthropic==0.3.13
+langchain-text-splitters==0.3.8
+langchain-mcp-adapters==0.1.1
+langgraph==0.4.7
+langgraph-checkpoint==2.0.26
+langgraph-prebuilt==0.2.1
+langgraph-sdk==0.1.70
+langsmith==0.3.42
+openai==1.82.0
