--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,9 +1,4 @@
-mcp==1.9.1
-mcp-use==1.2.13
-fastapi==0.115.12
-uvicorn==0.34.2
-pillow==11.1.0
-chess==1.11.2
+fastmcp==2.5.1
 openapi-pydantic==0.5.1
 pydantic==2.11.5
 pydantic-settings==2.9.1
