--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,4 +1,7 @@
 fastmcp==2.5.1
+uvicorn==0.34.2
+sse-starlette==2.3.5
+starlette==0.46.2
 openapi-pydantic==0.5.1
 pydantic==2.11.5
 pydantic-settings==2.9.1
